--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
-    "next": "13.1.6",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-simple-typewriter": "^5.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-next": "^13.4.12",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
   }
